<resources>
    <string name="app_name">MobileVoting</string>
    <string name="beginButtonTitle">Begin Voting</string>
    <string name="endButtonTitle">End Voting</string>
    <string name="candidateButtonTitle">Add Candidates</string>
    <string name="title_activity_initial_setup">InitialSetup</string>
    <string name="id_prompt">Enter ID:</string>
    <string name="add_text">ADD</string>
    <string name="done_text">DONE</string>
    <string name="passkey_prompt">Passkey:</string>
    <string name="title_activity_script_tester">ScriptTester</string>
    <string name="enter_button">ENTER</string>
    <string name="test_prompt">Please Paste The Code You Wish To Test\nSeparate Each Command On a New Line</string>
    <string name="results_prompt">Your Code Is</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="code_untested">Code Untested</string>
    <string name="code_pass">Code Passed</string>
    <string name="code_fail">Code Failed</string>
</resources>
